# awesome-ai-apps

./: .gitignore  Readme.md  Roadmap.md
.devcontainer/: devcontainer.json
.github/: funding.yaml
.github/workflows/: deploy.yml  hugo-deploy.yml
advanced-agents/blog-video-writer/: App.tsx  README.md  constants.ts  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  types.ts  vite.config.ts
advanced-agents/brand-video-monitor/: App.tsx  README.md  constants.ts  index.html  package-lock.json  package.json  types.ts
multi-agent-teams/content-creation-team/: .env.example  README.md  app.py  requirements.txt
multimodal-apps/gemini-veo-sketch2video/: LICENSE  README.md  app.py  check_setup.py  requirements.txt
multimodal-apps/gemini-video-analyzer/: README.md
multimodal-apps/hedra-live-avatars-demo/: README.md
multimodal-apps/hedra-live-avatars-demo/hedra-avatar-backend/: .env  pyproject.toml
multimodal-apps/hedra-live-avatars-demo/hedra-avatar-backend/app/: main.py
multimodal-apps/multi-modal-chatbot/: App.tsx  constants.ts  index.css  index.html  index.tsx  package.json  types.ts
multimodal-apps/talk-to-ai-girlfriend/: .gitignore  README.md  create-hedra-avatar.cjs  create.js  package-lock.json  package.json
rag-applications/competitive-intelligence-platform/: .env.example  README.md  app.py  requirements.txt
rag-applications/content-management-system/: .env.example  README.md  app.py  requirements.txt
rag-applications/contextual-video-rag/: App.tsx  README.md  constants.ts  (+5 more)
website/: README.md  build.sh  hugo.toml
(+156 files in other folders)
